--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
     "lint": "eslint --ignore-path .gitignore .",
     "commit": "cz"
   },
   "author": "Max Milliano <maxmillianox@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.6.0",
     "@types/pg": "^8.6.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "prisma": "^3.6.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
