--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "prisma": "npx prisma db push",
-    "build": "tsc && node build/server.js ",
+    "build": "npm install && tsc && node build/server.js ",
     "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
     "lint": "eslint --ignore-path .gitignore .",
     "commit": "cz"
