--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "prisma": "npx prisma db push",
-    "start": "npm install && tsc && npm run build",
+    "start": "npm install & tsc & npm run build",
+    "postinstall": "tsc",
     "build": "node src/server.js ",
     "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
     "lint": "eslint --ignore-path .gitignore .",
