--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "scripts": {
     "prisma": "npx prisma db push",
     "start": "npm install & tsc & npm run build",
-    "postinstall": "tsc",
     "build": "node src/server.js ",
     "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
     "lint": "eslint --ignore-path .gitignore .",
@@ -41,8 +40,7 @@
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.27.1",
     "husky": "^7.0.4",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.2"
+    "ts-node-dev": "^1.1.8"
   },
   "config": {
     "commitizen": {
