fix(nova ordenaçao de script): seguindo novo modelo

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "scripts": {
     "prisma": "npx prisma db push",
-    "start": "npm install & tsc & npm run build",
-    "build": "node build/server.js ",
+    "start": "node build/server.js",
+    "build": "tsc ",
+    "postinstall": "npm run build",
     "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
     "lint": "eslint --ignore-path .gitignore .",
     "commit": "cz"
