--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "prisma": "npx prisma db push",
-    "start": "node build/server.js",
+    "start": "npm run prisma && node build/server.js",
     "build": "tsc ",
     "postinstall": "npm run build",
     "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
